kubernetes/deno.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deno-test
  labels:
    app: deno-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deno-test
  template:
    metadata:
      labels:
        app: deno-test
    spec:
      containers:
        - name: deno-test
          image: nubodev/deno-test:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "1Mi"
            limits:
              memory: "512Mi"
          volumeMounts:
            - name: local
              mountPath: /deno-dir
      volumes:
        - name: local
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: deno-test
  labels:
    app: deno-test
spec:
  selector:
    app: deno-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deno-test
  annotations:
    kubernetes.io/ingress.class: "kong"
spec:
  rules:
    - host: "deno.nubo.services"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deno-test
                port:
                  number: 80
