kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: deno-test
  labels:
    app: deno-test
spec:
  selector:
    app: deno-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deno-test
  annotations:
    kubernetes.io/ingress.class: "kong"
spec:
  rules:
    - host: "deno.nubo.services"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deno-test
                port:
                  number: 80
